Prevent double scrollbar when editing emails and keep the email preview from going off screen

--- a/src/templates/EmailEditorContent/EmailEditorContent.css
+++ b/src/templates/EmailEditorContent/EmailEditorContent.css
@@ -89,8 +89,8 @@
 
 .email-preview {
   box-shadow: 0 0 0.5rem var(--blue-gray-light);
-  height: 85vh;
-  margin: 1.5rem auto 2.5rem;
+  height: 70vh;
+  margin: 1.5rem auto 0;
   overflow: auto;
   width: 37.5rem;
   transition: width ease-in-out 100ms;
